[tool.poetry]
name = "microblog-to-sqlite"
version = "0.1.0"
description = ""
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
license = "Save data from Micro.blog to a SQLite database"
readme = "README.md"
packages = [{include = "microblog_to_sqlite"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlite-utils = "^3.30"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.4"
responses = "^0.22.0"
bpython = "^0.23"

[tool.poetry.scripts]
microblog-to-sqlite = "microblog_to_sqlite.cli:cli"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
